# ragtime-projects

./: .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml
FullDemo [FD]/: classes.py  main.py  main_with_pipeline.py
FullDemo [FD]/expe/02. Answers/: Test--10Q_0C_0F_1M_10A_0HE_0AE_2024-06-25_18h42,28.html  Test--10Q_0C_0F_1M_10A_10HE_0AE_2024-06-25_18h42,28.json
FullDemo [FD]/logs/: logs.txt
FullDemo [FD]/res/spreadsheet_templates/: Eval_template.xlsx
Pdf_QA_tester/: README.md  Rag.py  Test.py  classes.py  main_answer_generation.py  main_facts_evals.py  question_generation.py  requirements.txt  retrieve_chunks.py
Pdf_QA_tester/logs/: logs.txt
Rag Full [RF]/: Human_evaluation.py  README.md  Rag.py  classes.py  main_answer_generation.py  main_facts_evals.py  requirements.txt  retrieve_chunks.py  retrieve_chunks_BM25.py
Rag Full [RF]/logs/: logs.txt
Rag Full [RF]/storage/: index_store.json
RagFull & TestLang project/: .gitignore  LICENSE  RAG.py  README.md  classes.py  main_answer.py  main_retrieve.py  requirement.txt
RagFull & TestLang project/storage/: index_store.json
RagFull project/: .env  RAG.py  README.md  main_answer.py  main_facts_evals.py  main_retrieve.py
RagFull project/storage/: docstore.json
albert/: README.md  albert_llm_api_caller.py  classes.py  conf.yaml  main.py  prompter_MCQ.py
albert/original_data/: HF_QCM_reconcile_V1.json  HF_QCM_reconcilie_V1.xlsx  MCQ_MFS_v1.xlsx
deepseek/: main.py
google_nq/: .gitignore  README.md  main.py
what_do_LLM_think/: README.md  albert_llm_api_caller.py  classes.py  main.py
(+217 files in other folders)
